Add basic auth to example
